fix: align features title

--- a/css/styles.css
+++ b/css/styles.css
@@ -405,6 +405,12 @@ img {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .features-item-title {
+    text-align: left;
+  }
+}
+
 @media screen and (min-width: 1158px) {
   .features-item-title {
     font-size: 20px;
